--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,7 +11,9 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v3
+    - name: check out
+      uses: actions/checkout@v3
+
     - name: set up JDK 11
       uses: actions/setup-java@v3
       with:
@@ -26,7 +28,7 @@ jobs:
       run: ./gradlew build
 
     - name: Upload firmware directory
-      uses​: ​actions/upload-artifact@main
+      uses​: ​actions/upload-artifact@main
       with: 
         path: /HMCLPE/build/outputs/apk/release/HMCLPE-release-unsigned.apk
 
